<resources>
    <string name="app_name">XLight</string>
    <string name="action_settings">Settings</string>
    <string name="login_text_user">Enter Email</string>
    <string name="login_text_password">Enter Password</string>
    <string name="login_text_forget">Forgot Password?</string>
    <string name="login_text_register">Sign up</string>
    <string name="login_text">Log In</string>
    <string name="account_is_null">Account is empty</string>
    <string name="password_is_null">Password is empty</string>
    <string name="login_success">Login Successfully</string>
    <string name="net_error">network incorrect，please check network</string>
    <string name="registe_success">Sign up Successfully</string>
    <string name="input_old_pwd">Please enter the original password</string>
    <string name="input_new_pwd">Please enter a new password</string>
    <string name="input_new_pwd_again">Please enter the new password again</string>
    <string name="two_pwd_not_same">Entered passwords differ</string>
    <string name="modify_pwd_success">Password reset complete</string>
    <string name="commit_img">Submitting...</string>
    <string name="login_first">Log in first, please</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="photo_set_fail">Setup failed, please try again!</string>
    <string name="pickerview_cancel">Cancel</string>
    <string name="pickerview_submit">Confirm</string>
    <string name="pickerview_year">Year</string>
    <string name="pickerview_month">Month</string>
    <string name="pickerview_day">Day</string>
    <string name="pickerview_hours">Hour</string>
    <string name="pickerview_minutes">Minute</string>
    <string name="content_is_null">Content can not be empty</string>
    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="unbind_sucess">Unbundling successfully</string>
    <string name="unbind_fail">Unbundling failed</string>
    <string name="scene_name">Scenario Name</string>
    <string name="color_temp">CCT</string>
    <string name="brightness">Brightness</string>
    <string name="color">Color</string>
    <string name="filter">Filter</string>
    <string name="filter_one">Breathe</string>
    <string name="filter_two">Flashing</string>
    <string name="filter_three">Colorful Breathe</string>
    <string name="filter_four">Colorful Flashing</string>
    <string name="scene_wait_device">Long press to adjust the device</string>
    <string name="scene_wait_last_select">Please add at least one device</string>
    <string name="scene_custom">Customize scene</string>
    <string name="scene_system">System scene</string>
    <string name="scene_change_success">execute %s scene completed</string>
    <string name="scene_change_failed">execute %s scene failed</string>
    <string name="scene_close">Close</string>
    <string name="scene">Scenario</string>
    <string name="select">Select</string>
    <string name="email_error">E-mail format is incorrect</string>
    <string name="input_email">Please enter your email address</string>
    <string name="next">Next</string>
    <string name="loading">Loading...</string>
    <string name="commiting">Submitting...</string>
    <string name="lamp">Light</string>
    <string name="add_device_bluetooth">Bluetooth</string>
    <string name="add_device_accesspoint">Access Point</string>
    <string name="confirm_status">Confirm Device State</string>
    <string name="add_device_one_title">Make sure controller is powered on</string>
    <string name="please_open_wifi">Please open WiFi</string>
    <string name="please_open_blue">Please open Bluetooth</string>
    <string name="notfound_bluetooth">No Bluetooth module found</string>
    <string name="add_device_one_desc">The on-board LED should be blinking blue.If not,hold the SETUP button for 3 seconds</string>
    <string name="add_device_one_sure_title">Controller is powered on</string>
    <string name="add_device_one_sure_desc">Controller is powered on and blue light has blinked</string>
    <string name="add_device_end_title">No controller found</string>
    <string name="add_device_end_desc">Please try again and then reconnect</string>
    <string name="add_device_end_list1">1、Please turn on the phone Bluetooth</string>
    <string name="add_device_end_list2">2、Please re-power controller</string>
    <string name="add_device_end_list3">3、Disconnect the controller from other phones</string>
    <string name="add_device_end_list4">4、Connect your phone near the controller during the connection</string>
    <string name="add_device_end_list5">5、Please check Wi-Fi signal and correctness</string>
    <string name="add_device_end_try">Retry</string>
    <string name="add_device_end_back">Back</string>
    <string name="add_device_wifi_title">Set the controller for Wi-Fi</string>
    <string name="add_device_wifi_desc">Do not connect your phone to Wi-Fi with "5G"</string>
    <string name="add_device_wifi_btn">Connect</string>
    <string name="add_device_wifi_scan">Scanning...</string>
    <string name="add_device_wifi_hidden">Please input hidden SSID</string>
    <string name="add_device_wifi_hint">My network is not listed</string>
    <string name="add_device_wifi_wait">Please wait</string>
    <string name="add_device_wifi_step1">Pairing with device</string>
    <string name="add_device_wifi_step2">Connecting device</string>
    <string name="add_device_wifi_step3">Clear device Wi-Fi information</string>
    <string name="add_device_wifi_step4">Setting device Wi-Fi information</string>
    <string name="add_device_wifi_step5">Restarting</string>
    <string name="add_device_wifi_step7">Configuration device successfully</string>
    <string name="add_device_wifi_step6">Checking device status</string>
    <string name="add_device_wifi_check">Wi-Fi password is greater than or equal to 8</string>
    <string name="add_device_wifi_disconnect">Controller connection interrupted, please try again</string>
    <string name="add_device_success_title">Connect to Wi-Fi successfully</string>
    <string name="add_device_success_desc">Congratulations, you have successfully connected the controller and Wi-Fi</string>
    <string name="add_device_success_hint">Give your controller a name</string>
    <string name="add_device_success_master">Set as my master device</string>
    <string name="add_device_success_name">Please input controller name</string>
    <string name="find_devices">Add Controller</string>
    <string name="add_device_two_desc">Please keep the phone as close as possible to the controller</string>
    <string name="add_device_two_title">Searching for controller</string>
    <string name="add_device_two_title2">Switching network</string>
    <string name="add_device_bulb_title_rainbow">Rainbow</string>
    <string name="add_device_bulb_title_sunny">Sunny</string>
    <string name="add_device_bulb_rainbow">Support brightness, color temperature, color adjustment</string>
    <string name="add_device_bulb_sunny">Support brightness, color temperature adjustment</string>
    <string name="select_blub_type">Select Bulb Type</string>
    <string name="add_device_bulb_ok">OK</string>
    <string name="add_device_bulb_bind">the device belongs to someone else</string>
    <string name="device_link_success">The device is bound successfully</string>
    <string name="luanch_condition">Launch Conditions</string>
    <string name="timer">Timing</string>
    <string name="detection_to_the_active">Detected activity</string>
    <string name="detection_to_the_voice">Detected voice</string>
    <string name="temperature">Temperature</string>
    <string name="leave_home">Leave Home</string>
    <string name="go_home">Be Home</string>
    <string name="gas">Gas</string>
    <string name="load_base_info_fail">Failed to load basic information...</string>
    <string name="temp_setting">Temperature Setting</string>
    <string name="briress_setting">Brightness Setting</string>
    <string name="please_select_status">Please select the status</string>
    <string name="please_select_temp">Please select the temperature</string>
    <string name="higer">Above</string>
    <string name="equal">Equal</string>
    <string name="lower">Under</string>
    <string name="timer_setting">Timing Setting</string>
    <string name="select_repeate_time">Please select repeat cycle</string>
    <string name="please_select_time">Please select the time</string>
    <string name="please_select">Please select</string>
    <string name="xingqiyi">Monday</string>
    <string name="xingqier">Tuesday</string>
    <string name="xingqisan">Wednesday</string>
    <string name="xingqisi">Thursday</string>
    <string name="xingqiwu">Friday</string>
    <string name="xingqiliu">Saturday</string>
    <string name="xingqiri">Sunday</string>
    <string name="custom">Custom</string>
    <string name="device_connect_failed">Device [%s] connection failed</string>
    <string name="device_disconnect">Device disconnected,Please try click refresh</string>
    <string name="share">Share</string>
    <string name="share_title">Create Share</string>
    <string name="share_desc">Share your device to your friends and family</string>
    <string name="share_hint">Receive sharer\'s account</string>
    <string name="share_notfound">Username not exist</string>
    <string name="share_success">Device to share success</string>
    <string name="share_already">The device has been obtained by the user</string>
    <string name="share_yourself">The goal can not be for yourself</string>
    <string name="share_list_form">Form:</string>
    <string name="share_list_type_account">Account share</string>
    <string name="share_list_type_scan">Scan share</string>
    <string name="share_list_type_connect">Link share</string>
    <string name="share_list_state_0">Waiting for confirmation</string>
    <string name="share_list_state_1">Accepted</string>
    <string name="share_list_state_2">Rejected</string>
    <string name="share_list_state_3">Canceled</string>
    <string name="share_list_state_4">Expired</string>
    <string name="share_list_unknown">UnKnown</string>
    <string name="complete">Complete</string>
    <string name="rule">Rule</string>
    <string name="first_page">Home</string>
    <string name="help">Help</string>
    <string name="regist">Sign up</string>
    <string name="regist_protocal">Agreement</string>
    <string name="please_input_your_email">Enter Email</string>
    <string name="register_protocal">Agreement</string>
    <string name="has_agree">By signing up account,you agree to the aggreement</string>
    <string name="quick_bind">Fast binding allows family members to quickly bind devices, using the following three ways:</string>
    <string name="one_input_family_email">1,Enter the e-mail address of the family member directly</string>
    <string name="__complete">Complete</string>
    <string name="one_scan_code">2,Family members can bind devices by scanning the following QR code</string>
    <string name="three_bind_order">3,Family members can bind devices by entering the following associated password</string>
    <string name="link_order">Associated password：</string>
    <string name="input_verifycode">Please enter verification code</string>
    <string name="select_pic">Select Image</string>
    <string name="camera">Camera</string>
    <string name="calary_select">Choose from Album</string>
    <string name="hint_find_pwd">Please enter the eamil address you signed up with to receive a verification code</string>
    <string name="txt_family_code_hint1">For home sharing devices</string>
    <string name="txt_family_code_hint2">Family member scan code login</string>
    <string name="txt_family_code_hint3">Valid for 10 minutes</string>
    <string name="txt_family_code_btn">Share QRCode</string>
</resources>