<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_glance"
            android:icon="@drawable/home"
            android:title="@string/first_page" />
        <item
            android:id="@+id/nav_control"
            android:icon="@drawable/home_nav_control"
            android:title="@string/rule" />
        <item
            android:id="@+id/nav_scenario"
            android:icon="@drawable/home_scenario"
            android:title="@string/scene" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/home_schedule"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/home_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/home_help"
            android:title="@string/help" />
    </group>

    <item android:title="Manage" android:visible="false">
        <menu>
            <item
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="Settings" />
            <item
                android:icon="@drawable/ic_help_black_24dp"
                android:title="Help" />
        </menu>
    </item>

</menu>
