<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <include layout="@layout/top_layout" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/sv_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/add_device_end_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_margin="10dp"
                tools:text="@string/add_device_end_title" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/add_device_end_desc"
                android:textAlignment="center"
                tools:text="@string/add_device_end_desc" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="20dp"
                android:text="@string/add_device_end_list1"
                tools:text="@string/add_device_end_list1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="20dp"
                android:text="@string/add_device_end_list2"
                tools:text="@string/add_device_end_list2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="20dp"
                android:text="@string/add_device_end_list3"
                tools:text="@string/add_device_end_list3" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="20dp"
                android:text="@string/add_device_end_list4"
                tools:text="@string/add_device_end_list4" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="20dp"
                android:text="@string/add_device_end_list5"
                tools:text="@string/add_device_end_list5" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@color/bar_color"
                android:onClick="RetryClick"
                android:text="@string/add_device_end_try"
                android:textColor="@color/white"
                tools:text="@string/add_device_end_try" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:onClick="GiveupClick"
                android:text="@string/add_device_end_back"
                android:textColor="@color/bar_color"
                tools:text="@string/add_device_end_back" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
