<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_top_edit"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/et_user_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/edt_bg"
            android:drawableLeft="@drawable/icon_user"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/please_input_your_email"
            android:singleLine="true"
            android:paddingLeft="6dp"
            android:textColorHint="@color/edit_login_color" />


        <Button
            android:id="@+id/btn_finash_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_user_account"
            android:layout_marginTop="30dp"
            android:background="@drawable/layout_button_radius"
            android:padding="@dimen/margin_l_r"
            android:text="@string/complete"
            android:textColor="@color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_finash_registered"
            android:layout_marginTop="12dp"
            android:text="@string/hint_find_pwd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_finash_registered"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_agree"
                android:textColor="@color/textDarkGrey" />

            <TextView
                android:id="@+id/tv_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_protocal"
                android:textColor="@color/blue_sky" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>