<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            android:paddingLeft="46dp"
            android:paddingRight="46dp"
            android:paddingTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_family_code_hint1"
                android:textColor="#ff808080"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/txt_family_code_hint2"
                android:textColor="#ff808080"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/qrcode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/txt_family_code_hint3"
                android:textColor="#ff808080"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_button_radius"
            android:padding="@dimen/margin_l_r"
            android:text="@string/txt_family_code_btn"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>